# mcv4fwdd

./: .gitignore  CMakeLists.txt  TODO  mcv4fwdd.example.conf
src/: application.cc  application.h  commandline.cc  commandline.h  forwarder.cc  forwarder.h  mcv4fwdd.cc  mcv4fwdd.service  receiver.cc  receiver.h  router.cc  router.h  sender.cc  sender.h  utility.cc  utility.h
src/config/model/: configuration.cc  configuration.h  forwardingrule.cc  forwardingrule.h  network.h  serviceconfiguration.cc  serviceconfiguration.h
src/config/parser/: context.h  parser.h  parser.y  scanner.l  tokenvalue.h
